# haskit

./: .gitignore  README.md  haskit.json
Tour/: datazoom.edh  eagleview.edh  plotting.edh  scratch.edh  web-server.edh
edh_modules/haskit/: RT.edh  __init__.edh  __main__.edh  cds.edh  debug.edh  demo-server.edh  plot.edh  utils.edh  web.edh
edh_modules/haskit/effects/: __init__.edh  cds.edh
edh_modules/haskit/tour/: __init__.edh
edh_modules/haskit/web/: __init__.edh  cds.js  comm.js  front.html  front.js  front.mjs  haskit  haskit.css  haskit.js  haskit.mjs  hastalk  haze-plot.js  haze-plot.mjs  haze.html  iplot.css  iplot.html  log.js  log.mjs  narr.css  narr.html  narr.js  page.html  page.js  plot.css  plot.html  plot.js  ts.mjs
edh_modules/haskit/web/demo/: microscope.html  microscope.js
edh_modules/haskit/web/haze/: plot-relay.mjs  plot.html  plot.mjs
edh_modules/haskit/web/narr/: narr-relay.mjs  narr.css  narr.html  narr.js  narr.mjs
edh_modules/haskit/web/ws/: __main__.edh
haskit/: haskit.cabal
haskit-vscode/: LICENSE  README.md  package.json  tsconfig.json
haskit-vscode/src/: extension.ts  haskit.ts
haskit/hski/: Main.hs
haskit/pub/: HaskIt.hs
haskit/src/HaskIt/: RT.hs
host.hs/: haskit.cabal
host.hs/hski/: Main.hs  Repl.hs
host.hs/pub/: HaskIt.hs
host.hs/src/: HaskIt.hs
host.hs/src/HaskIt/: RT.hs
host.js/haskit/: conn.js  conn.mjs  hski.mjs  index.js  index.mjs  log.js  log.mjs  package.json  palettes.mjs  ts.mjs
host.js/hastalk/: index.js
