cabal-version:      2.4
name:               haskit
version:            0.1.0.0
license:            BSD-3-Clause
copyright:          Compl Yue
maintainer:         compl.yue@icloud.com
author:             Compl Yue
stability:          experimental
homepage:           https://github.com/e-wrks/haskit
bug-reports:        https://github.com/e-wrks/haskit/issues
synopsis:           HaskIt Đ - Haskell Software, Fast Iterations
description:
  Quality from Haskell, Speed to Market from Đ (Edh)
  Please see the README on Github at <https://github.com/e-wrks/haskit>

category:           Software Engineering Development
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/e-wrks/haskit
  subdir:   host.hs

library
  exposed-modules:    HaskIt
  hs-source-dirs:     pub
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    ConstraintKinds
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

  ghc-options:        -Wall
  build-depends:
    , base                  >=4.12
    , binary
    , bytestring
    , clock
    , containers
    , edh
    , hasdim
    , hashable
    , haskit-internal
    , lossless-decimal
    , mtl
    , nedh
    , network               >=3.1.1.1
    , scientific
    , sedh
    , stm                   >=2.5
    , text
    , time
    , transformers
    , unix
    , unordered-containers

executable hski
  main-is:            Main.hs
  hs-source-dirs:     hski
  other-modules:
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    ConstraintKinds
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

  ghc-options:        -Wall -threaded -rtsopts
  build-depends:
    , base              >=4.12
    , bytestring
    , edh
    , hasdim
    , haskit
    , lossless-decimal
    , mtl
    , nedh
    , sedh
    , stm               >=2.5
    , text
    , transformers

library haskit-internal
  exposed-modules:    HaskIt.RT
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    ConstraintKinds
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

  ghc-options:        -Wall
  build-depends:
    , base                  >=4.12
    , binary
    , bytestring
    , clock
    , containers
    , directory
    , edh
    , filepath
    , hasdim
    , hashable
    , lossless-decimal
    , mmap                  >=0.5.4
    , mtl
    , neat-interpolation
    , nedh
    , primitive             >=0.2.1
    , scientific
    , sedh
    , stm                   >=2.5
    , text
    , time
    , transformers
    , unix
    , unordered-containers
    , vector                >=0.5
